[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/room_shell.gd" type="Script" id=1]
[ext_resource path="res://img/kitchen/sketch.png" type="Texture" id=2]
[ext_resource path="res://src/Door.gd" type="Script" id=3]
[ext_resource path="res://img/temp_arrow.png" type="Texture" id=4]
[ext_resource path="res://src/LockedDoor.gd" type="Script" id=5]
[ext_resource path="res://img/kitchen/cellar_door_closed.png" type="Texture" id=6]
[ext_resource path="res://img/kitchen/cellar_door_opened.png" type="Texture" id=7]
[ext_resource path="res://img/ui/lock.png" type="Texture" id=8]
[ext_resource path="res://src/PickupItem.gd" type="Script" id=9]
[ext_resource path="res://img/kitchen/cup_empty.png" type="Texture" id=10]
[ext_resource path="res://src/Sink.gd" type="Script" id=11]
[ext_resource path="res://img/kitchen/cup_full.png" type="Texture" id=12]
[ext_resource path="res://img/kitchen/liquor.png" type="Texture" id=13]
[ext_resource path="res://src/ToggleOpenable.gd" type="Script" id=14]
[ext_resource path="res://img/kitchen/cabinet_right_closed.png" type="Texture" id=15]
[ext_resource path="res://img/kitchen/cabinet_left_opened.png" type="Texture" id=16]
[ext_resource path="res://img/kitchen/cabinet_right_opened.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.8139, 195.76 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 74.6987, 109.364 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 73.7302, 213.854 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.5266, 16.125 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 48.9508, 23.0543 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.7599, 33.1073 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 85.0508, 58.4772 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 78.2014, 57.898 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
room_width = 1500

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="LivingRoomDoor" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 99, 314 )
script = ExtResource( 3 )
to_room = "living_room"
initial_camera_x = -3000.0

[node name="Arrow" type="Sprite" parent="LivingRoomDoor"]
visible = false
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LivingRoomDoor"]
position = Vector2( -48.44, -5.17322 )
shape = SubResource( 1 )

[node name="CellarDoor" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 359.897, 275.649 )
script = ExtResource( 5 )
to_room = "cellar"
unlocked_state_marker = "cellar-unlocked"
locked_text = [ "Dad keeps this locked." ]
key_id = "cellar_key"

[node name="State1" type="Sprite" parent="CellarDoor"]
position = Vector2( -58.6508, 17.7733 )
texture = ExtResource( 6 )

[node name="State2" type="Sprite" parent="CellarDoor"]
visible = false
position = Vector2( -58.6508, 17.7733 )
texture = ExtResource( 7 )

[node name="Lock" type="Sprite" parent="CellarDoor"]
visible = false
position = Vector2( 53.1995, 7.71924 )
scale = Vector2( 0.14789, 0.14789 )
texture = ExtResource( 8 )

[node name="Arrow" type="Sprite" parent="CellarDoor"]
visible = false
texture = ExtResource( 4 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CellarDoor"]
position = Vector2( -1, -3.38223 )
shape = SubResource( 2 )

[node name="BedroomDoor" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1435.15, 286.035 )
script = ExtResource( 3 )
to_room = "bedroom"

[node name="Arrow" type="Sprite" parent="BedroomDoor"]
visible = false
texture = ExtResource( 4 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BedroomDoor"]
position = Vector2( -5.03491, -2.51752 )
shape = SubResource( 3 )

[node name="Cup" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 757.622, 245.596 )
script = ExtResource( 9 )
lines = [ "An empty cup." ]
item_id = "cup"
item_sprite = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Cup"]
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup"]
position = Vector2( 0, 1.5094 )
shape = SubResource( 4 )

[node name="Sink" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 604.718, 244.609 )
script = ExtResource( 11 )
lines = [ "The sink." ]
item_text = {
"liquor": "It's not for water.",
"water_cup": "It's already full."
}
cup_of_water_texture = ExtResource( 12 )
fill_cup_text = [ "I filled the cup with water." ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sink"]
position = Vector2( 12.8878, 0 )
shape = SubResource( 5 )

[node name="Liquor" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1231.48, 91.575 )
script = ExtResource( 9 )
lines = [ "Dad doesn't want me to drink this.", "|_ . . .", "Whic is |!totally |!unfair." ]
item_id = "liquor"
item_sprite = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Liquor"]
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Liquor"]
position = Vector2( -1.54004, 0.513344 )
shape = SubResource( 6 )

[node name="CabinetLeft" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 765.734, 362.303 )
script = ExtResource( 14 )
lines = [ "It's empty." ]
close_nodes = [ "CabinetRight" ]

[node name="State1" type="Sprite" parent="CabinetLeft"]
position = Vector2( 46.776, 3.30737 )
texture = ExtResource( 15 )

[node name="State2" type="Sprite" parent="CabinetLeft"]
visible = false
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CabinetLeft"]
position = Vector2( 6.63422, -22.5563 )
shape = SubResource( 7 )

[node name="CabinetRight" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 987.474, 363.854 )
script = ExtResource( 14 )
lines = [ "Just some food." ]
close_nodes = [ "CabinetLeft" ]

[node name="State1" type="Sprite" parent="CabinetRight"]
texture = ExtResource( 15 )

[node name="State2" type="Sprite" parent="CabinetRight"]
visible = false
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CabinetRight"]
position = Vector2( -38.15, -24.1543 )
shape = SubResource( 8 )
[connection signal="input_event" from="LivingRoomDoor" to="LivingRoomDoor" method="_on_Door_input_event"]
[connection signal="mouse_entered" from="LivingRoomDoor" to="LivingRoomDoor" method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="LivingRoomDoor" to="LivingRoomDoor" method="_on_Door_mouse_exited"]
[connection signal="input_event" from="CellarDoor" to="CellarDoor" method="_on_Door_input_event"]
[connection signal="mouse_entered" from="CellarDoor" to="CellarDoor" method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="CellarDoor" to="CellarDoor" method="_on_Door_mouse_exited"]
[connection signal="input_event" from="BedroomDoor" to="BedroomDoor" method="_on_Door_input_event"]
[connection signal="mouse_entered" from="BedroomDoor" to="BedroomDoor" method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="BedroomDoor" to="BedroomDoor" method="_on_Door_mouse_exited"]
[connection signal="input_event" from="Cup" to="Cup" method="_on_PickupItem_input_event"]
[connection signal="input_event" from="Sink" to="Sink" method="_on_Clickable_input_event"]
[connection signal="input_event" from="Liquor" to="Liquor" method="_on_PickupItem_input_event"]
[connection signal="input_event" from="CabinetLeft" to="CabinetLeft" method="_on_Openable_input_event"]
[connection signal="input_event" from="CabinetRight" to="CabinetRight" method="_on_Openable_input_event"]
